--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,4 +1,5 @@
 <resources>
+    <!-- TODO: CLEAN THIS UP, AFTER DATE PICKER VISUALIZATION -->
 
     <!-- Base application theme -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
@@ -6,6 +7,10 @@
         <item name="colorPrimary">@color/navigationBarColor</item>
         <item name="colorPrimaryDark">@color/navigationBarDarkColor</item>
         <item name="colorAccent">@color/accentColor</item>
+    </style>
+
+    <style name="DrawerArrowStyle" parent="Widget.AppCompat.DrawerArrowToggle">
+        <item name="android:color">@color/accentColor</item>
     </style>
 
     <!-- SplashScreen Theme, must be a theme to be a splash -->
@@ -27,7 +32,9 @@
 
     <style name="LyonsCalendarViewLayout"> <item name="android:background">@color/foregroundColor</item> </style>
 
-    <style name="LyonsMonthName" parent="CaldroidDefaultMonthName"> <item name="android:textColor">@color/accentColor</item> </style>
+    <style name="LyonsMonthName" parent="CaldroidDefaultMonthName">
+        <item name="android:textColor">@color/accentColor</item>
+    </style>
 
     <style name="LyonsGridView" parent="CaldroidDefaultGridView">
         <item name="android:horizontalSpacing">2dp</item>
@@ -42,7 +49,9 @@
         <item name="android:background">@drawable/calendar_cell</item>
     </style>
 
-    <style name="LyonsNormalCell" parent="LyonsCell"> <item name="android:padding">5dp</item> </style>
+    <style name="LyonsNormalCell" parent="LyonsCell">
+        <item name="android:padding">5dp</item>
+    </style>
 
     <style name="LyonsSquareCell" parent="LyonsCell" />
 
@@ -62,5 +71,65 @@
         <item name="android:background">@drawable/left_arrow</item>
     </style>
 
-    <style name="LyonsWeekday" parent="CaldroidDefaultWeekday"> <item name="android:textColor">@color/accentColor</item> </style>
+    <style name="LyonsWeekday" parent="CaldroidDefaultWeekday">
+        <item name="android:textColor">@color/accentColor</item>
+    </style>
+
+    <!-- Announcement Proposal Themes -->
+    <style name="EditTextStyle">
+        <item name="android:background">@drawable/input_field_default</item>
+        <item name="android:inputType">text</item>
+        <item name="android:padding">5dp</item>
+        <item name="android:textSize">21sp</item>
+        <item name="android:textColor">@color/accentColor</item>
+    </style>
+
+    <style name="DatePickerDialogTheme" parent="Theme.AppCompat.Light.Dialog.Alert">
+        <item name="colorPrimary">@color/navigationBarColor</item>
+        <item name="colorPrimaryDark">@color/navigationBarDarkColor</item>
+        <item name="colorAccent">@color/accentColor</item>
+
+
+        <!--<item name="android:actionMenuTextColor">@color/accentColor</item>-->
+        <!--<item name="android:windowBackground">@drawable/date_picker_background</item>-->
+        <!--<item name="android:datePickerStyle">@android:style/Widget.DatePicker</item>-->
+
+        <!--<item name="android:textColorPrimary">@color/accentColor</item>-->
+        <!--<item name="android:colorBackground">@color/foregroundColor</item>-->
+        <!--<item name="android:windowFrame">@null</item>-->
+        <!--<item name="android:spinnerStyle">@style/Spinner</item>-->
+
+
+        <!--<item name="android:buttonBarStyle">@style/Widget.AppCompat.ButtonBar.AlertDialog</item>-->
+        <!--<item name="android:borderlessButtonStyle">@style/Widget.AppCompat.Button.Borderless</item>-->
+        <!--<item name="android:windowCloseOnTouchOutside">@bool/abc_config_closeDialogWhenTouchOutside</item>-->
+
+    </style>
+
+    <style name="CustomTheme" parent="@android:style/Theme.Holo.Light">
+        <!--<item name="android:actionBarStyle">@style/MyActionBar</item>-->
+        <!--<item name="android:actionBarTabStyle">@style/MyActionBarTabStyle</item>-->
+        <!--<item name="android:actionBarTabTextStyle">@style/MyActionBarTabText</item>-->
+        <!--<item name="android:actionButtonStyle">@style/MyActionBarButtonStyle</item>-->
+
+    </style>
+
+    <style name="Spinner" parent="Widget.AppCompat.Spinner">
+        <item name="android:background">@color/backgroundColor</item>
+        <item name="android:popupBackground">@color/foregroundColor</item>
+
+        <!--<style name="Widget.Spinner">-->
+        <!--<item name="background">@drawable/btn_dropdown</item>-->
+        <!--<item name="clickable">true</item>-->
+        <!--<item name="spinnerMode">dialog</item>-->
+
+        <!--<item name="dropDownSelector">@drawable/list_selector_background</item>-->
+        <!--<item name="popupBackground">@drawable/spinner_dropdown_background</item>-->
+        <!--<item name="dropDownVerticalOffset">-10dip</item>-->
+        <!--<item name="dropDownHorizontalOffset">0dip</item>-->
+        <!--<item name="dropDownWidth">wrap_content</item>-->
+        <!--<item name="popupPromptView">@layout/simple_dropdown_hint</item>-->
+        <!--<item name="gravity">center</item>-->
+        <!--</style>-->
+    </style>
 </resources>
